src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


*{
  margin:0;
  padding:0;
}

.App{
  /* max-width: min(100vw, 1250px); */
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 0 auto;
}

.wrapper{
  max-width: 1200px;
  margin: 0 auto;
}



/* temporary for styling */

input{
  border:1px solid #292929;
  padding: 2px;
}

textarea{
  border:1px solid #292929;
  padding: 2px;
}

select{
  border:1px solid#292929;
  padding: 2px;
}


.swiper-pagination-bullet-active {
  background-color: #4fd1c5 !important
}


.swiper-button-next,
.swiper-button-prev{
  color:#4fd1c5 !important;
}

input[type=file]{
  /* width:10px; */
  border:none;
  color:transparent;
  margin-bottom: 2em;
}



.Toastify__progress-bar--success {
  background: #4fd1c5;
}

